Картинки и общие элементы страниц

--- a/addresses.html
+++ b/addresses.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Deliver</title>
+        <title>Отделения</title>
         <link rel="style" href="css/style.css">
     </head>
     <body>
@@ -15,8 +15,5 @@
             </nav>
         </header>
         <hr>
-        <section>
-            <h1>Компания доставки Deliver</h1>
-        </section>
     </body>
 </html>
