Добавлено содержимое некоторым файлам

--- a/partnership.html
+++ b/partnership.html
@@ -8,12 +8,24 @@
     <body>
         <header>
             <nav>
-                <a href="index.html"><img src="images/logo.png" alt="Главная"></a>
+                <a href="index.html"><img src="images/logo.png" alt="Главная" title="Главная"></a>
                 <a href="order.html">Заказ</a>
                 <a href="partnership.html">Сотрудничество</a>
                 <a href="addresses.html">Отделения</a>
             </nav>
         </header>
         <hr>
+        <section>
+            <h1>Сотрудничество</h1>
+            <img src="images/call.jpeg">
+            <h3>Наши партнёры:</h3>
+            <p>Ozon Amazon Wildberries AliExpress Yandex.Market Citilink M.Video Eldorado IKEA</p>
+        </section>
+        <hr>
+        <section>
+            <h1>Трудоустройство</h1>
+            <h3>Отправить резюме:</h3>
+            
+        </section>
     </body>
 </html>
