--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <nav>
-                <a href="index.html"><img src="images/logo.png" alt="Главная"></a>
+                <a href="index.html"><img src="images/logo.png" alt="Главная" title="Главная"></a>
                 <a href="order.html">Заказ</a>
                 <a href="partnership.html">Сотрудничество</a>
                 <a href="addresses.html">Отделения</a>
@@ -17,6 +17,16 @@
         <hr>
         <section>
             <h1>Компания доставки Deliver</h1>
+            <p>Компания "Deliver" на рынке с 2017 года. Высокое качество сервиса - наш приоритет. Вы всегда можете задать вопросы,
+                позвонив на горячую линию. Команда профессионалов следит за своевременной доставкой посылки, что включает в себя быстрые перевозки между складами,
+                сортировочными центрами и пунктами выдачи. Сотрудники проходят подготовку, совершенствуют свои навыки и знания, проходят специальные курсы и тренинги.
+                Наша миссия - постоянно развиваться, повышать качество продоставляемых услуг за счет внедрения новейших технологий. В своей деятельности компания
+                руководствуется принципом - "Быстро. Надёжно. Качественно",поэтому ответственное отношение к нашей работе - главное.
+            </p>
+            <img src="images/курьер1.jpeg">
+            <img src="images/курьер2.jpeg">
+            <img src="images/сортировка1.jpeg">
+            <img src="images/сортировка2.jpeg/">
         </section>
     </body>
 </html>
