--- a/order.html
+++ b/order.html
@@ -8,12 +8,15 @@
     <body>
         <header>
             <nav>
-                <a href="index.html"><img src="images/logo.png" alt="Главная"></a>
+                <a href="index.html"><img src="images/logo.png" alt="Главная" title="Главная"></a>
                 <a href="order.html">Заказ</a>
                 <a href="partnership.html">Сотрудничество</a>
                 <a href="addresses.html">Отделения</a>
             </nav>
         </header>
         <hr>
+        <section>
+            
+        </section>
     </body>
 </html>
