Добавлены формы и стили

--- a/index.html
+++ b/index.html
@@ -3,30 +3,37 @@
     <head>
         <meta charset="UTF-8">
         <title>Deliver</title>
-        <link rel="style" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <a href="index.html"><img src="images/logo.png" alt="Главная" title="Главная"></a>
-                <a href="order.html">Заказ</a>
-                <a href="partnership.html">Сотрудничество</a>
-                <a href="addresses.html">Отделения</a>
-            </nav>
-        </header>
-        <hr>
-        <section>
-            <h1>Компания доставки Deliver</h1>
-            <p>Компания "Deliver" на рынке с 2017 года. Высокое качество сервиса - наш приоритет. Вы всегда можете задать вопросы,
-                позвонив на горячую линию. Команда профессионалов следит за своевременной доставкой посылки, что включает в себя быстрые перевозки между складами,
-                сортировочными центрами и пунктами выдачи. Сотрудники проходят подготовку, совершенствуют свои навыки и знания, проходят специальные курсы и тренинги.
-                Наша миссия - постоянно развиваться, повышать качество продоставляемых услуг за счет внедрения новейших технологий. В своей деятельности компания
-                руководствуется принципом - "Быстро. Надёжно. Качественно",поэтому ответственное отношение к нашей работе - главное.
-            </p>
-            <img src="images/курьер1.jpeg">
-            <img src="images/курьер2.jpeg">
-            <img src="images/сортировка1.jpeg">
-            <img src="images/сортировка2.jpeg/">
-        </section>
+        <div class="container">
+            <header>
+                <a class="logo" href="index.html"><img class="logoimg" src="images/logo.png" alt="Главная" title="Главная"></a>
+                <nav>
+                    <a href="order.html">Заказ</a>
+                    <a href="partnership.html">Сотрудничество</a>
+                    <a href="addresses.html">Отделения</a>
+                </nav>
+            </header>
+            <main>
+                <hr>
+                <section>
+                    <h1>Компания доставки Deliver</h1>
+                    <p>Компания "Deliver" на рынке с 2017 года. Высокое качество сервиса - наш приоритет. Вы всегда можете задать вопросы,
+                        позвонив на горячую линию. Команда профессионалов следит за своевременной доставкой посылки, что включает в себя быстрые перевозки между складами,
+                        сортировочными центрами и пунктами выдачи. Сотрудники проходят подготовку, совершенствуют свои навыки и знания, проходят специальные курсы и тренинги.
+                        Наша миссия - постоянно развиваться, повышать качество продоставляемых услуг за счет внедрения новейших технологий. В своей деятельности компания
+                        руководствуется принципом - "Быстро. Надёжно. Качественно",поэтому ответственное отношение к нашей работе - главное.
+                    </p>
+                    <img class="imag" src="images/курьер1.jpeg">
+                    <img class="imag" src="images/курьер2.jpeg">
+                    <img class="imag" src="images/сортировка1.jpeg">
+                    <img class="imag" src="images/сортировка2.jpeg/">
+                </section>
+            </main>
+            <aside class="left-sidebar"></aside>
+            <aside class="right-sidebar"></aside>
+            <footer></footer>
+        </div>
     </body>
 </html>
