Стили дополнены и добавлены на другие страницы

--- a/order.html
+++ b/order.html
@@ -3,20 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <title>Оформление заказа</title>
-        <link rel="style" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <a href="index.html"><img src="images/logo.png" alt="Главная" title="Главная"></a>
-                <a href="order.html">Заказ</a>
-                <a href="partnership.html">Сотрудничество</a>
-                <a href="addresses.html">Отделения</a>
-            </nav>
-        </header>
-        <hr>
-        <section>
+        <div class="container">
+            <header>
+                <a class="logo" href="index.html"><img class="logoimg" src="images/logo.png" alt="Главная" title="Главная"></a>
+                <nav class="navigation">
+                    <a href="order.html">Заказ</a>
+                    <a href="partnership.html">Сотрудничество</a>
+                    <a href="addresses.html">Отделения</a>
+                </nav>
+            </header>
+            <main>
+                <hr>
+                <section>
             
-        </section>
+                </section>
+            </main>
+            <aside class="left-sidebar"></aside>
+            <aside class="right-sidebar"></aside>
+            <footer></footer>
+        </div>
     </body>
 </html>
