--- a/addresses.html
+++ b/addresses.html
@@ -3,83 +3,90 @@
     <head>
         <meta charset="UTF-8">
         <title>Отделения</title>
-        <link rel="style" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <a href="index.html"><img src="images/logo.png" alt="Главная" title="Главная"></a>
-                <a href="order.html">Заказ</a>
-                <a href="partnership.html">Сотрудничество</a>
-                <a href="addresses.html">Отделения</a>
-            </nav>
-        </header>
-        <hr>
-        <section>
-            <h1>Отделения</h1>
-            <p>Доставка по России и странам СНГ</p>
-            <h3>Список городов:</h3>
-            <p>Москва
-                Санкт-Петербург
-                Киев
-                Ташкент
-                Баку
-                Минск
-                Алма-Ата
-                Новосибирск
-                Екатеринбург
-                Харьков
-                Нижний Новгород
-                Казань
-                Челябинск
-                Омск
-                Самара
-                Ростов-на-Дону
-                Уфа
-                Красноярск
-                Ереван
-                Астана
-                Пермь
-                Воронеж
-                Волгоград
-                Шынкент
-                Ашхабад
-                Днепр
-                Одесса
-                Бишкек
-                Донецк
-                Краснодар
-                Саратов
-                Душанбе
-                Тюмень
-                Запорожье
-                Львов
-                Тольятти
-                Кишинев
-                Ижевск
-                Барнаул
-                Кривой Рог
-                Иркутск
-                Хабаровск
-                Ульяновск
-                Ярославль
-                Владивосток
-                Наманган
-                Махачкала
-                Томск
-                Оренбург
-                Кемерово
-                Новокузнецк
-                Рязань
-                Гомель
-                Астрахань
-                Самаркант
-                Набережные Челны
-                Пенза
-                Караганда
-                Липецк
-                Киров
-            </p>
-        </section>
+        <div class="container">
+            <header>
+                <a class="logo" href="index.html"><img class="logoimg" src="images/logo.png" alt="Главная" title="Главная"></a>
+                <nav class="navigation">
+                    <a href="order.html">Заказ</a>
+                    <a href="partnership.html">Сотрудничество</a>
+                    <a href="addresses.html">Отделения</a>
+                </nav>
+            </header>
+            <main>
+                <hr>
+                <section>
+                    <h1>Отделения</h1>
+                    <p>Доставка по России и странам СНГ</p>
+                    <h3>Список городов:</h3>
+                    <p>Москва
+                        Санкт-Петербург
+                        Киев
+                        Ташкент
+                        Баку
+                        Минск
+                        Алма-Ата
+                        Новосибирск
+                        Екатеринбург
+                        Харьков
+                        Нижний Новгород
+                        Казань
+                        Челябинск
+                        Омск
+                        Самара
+                        Ростов-на-Дону
+                        Уфа
+                        Красноярск
+                        Ереван
+                        Астана
+                        Пермь
+                        Воронеж
+                        Волгоград
+                        Шынкент
+                        Ашхабад
+                        Днепр
+                        Одесса
+                        Бишкек
+                        Донецк
+                        Краснодар
+                        Саратов
+                        Душанбе
+                        Тюмень
+                        Запорожье
+                        Львов
+                        Тольятти
+                        Кишинев
+                        Ижевск
+                        Барнаул
+                        Кривой Рог
+                        Иркутск
+                        Хабаровск
+                        Ульяновск
+                        Ярославль
+                        Владивосток
+                        Наманган
+                        Махачкала
+                        Томск
+                        Оренбург
+                        Кемерово
+                        Новокузнецк
+                        Рязань
+                        Гомель
+                        Астрахань
+                        Самаркант
+                        Набережные Челны
+                        Пенза
+                        Караганда
+                        Липецк
+                        Киров
+                    </p>
+                </section>
+            </main>
+            <aside class="left-sidebar"></aside>
+            <aside class="right-sidebar"></aside>
+            <footer></footer>
+        </div>
     </body>
 </html>
