--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <header>
                 <a class="logo" href="index.html"><img class="logoimg" src="images/logo.png" alt="Главная" title="Главная"></a>
-                <nav>
+                <nav class="navigation">
                     <a href="order.html">Заказ</a>
                     <a href="partnership.html">Сотрудничество</a>
                     <a href="addresses.html">Отделения</a>
