--- a/partnership.html
+++ b/partnership.html
@@ -3,42 +3,48 @@
     <head>
         <meta charset="UTF-8">
         <title>Сотрудничество</title>
-        <link rel="style" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <a href="index.html"><img src="images/logo.png" alt="Главная" title="Главная"></a>
-                <a href="order.html">Заказ</a>
-                <a href="partnership.html">Сотрудничество</a>
-                <a href="addresses.html">Отделения</a>
-            </nav>
-        </header>
-        <main>
-            <hr>
-            <section>
-                <h1>Сотрудничество</h1>
-                <img src="images/call.jpeg">
-                <h3>Наши партнёры:</h3>
-                <p>Ozon Amazon Wildberries AliExpress Yandex.Market Citilink M.Video Eldorado IKEA</p>
-                <h3>По вопросам сотрудничества можете написать нам на почту</h3>
-                <form action="mailto:lobastov5442@gmail.com" method="get">
-                    <input type="hidden" name="subject" value="Для сотрудничества" />
-                    <label for="msg">Message:</label>
-                    <textarea id="msg" name="body"></textarea>
-                    <input type="submit" value="Send" />
-                </form>
-            </section>
-            <hr>
-            <section>
-                <h1>Трудоустройство</h1>
-                <h3>Отправить резюме:</h3>
-                <form enctype="multipart/form-data" action="" method="post">
-                    <p><input type="file" name="f">
-                    <input type="submit" value="Отправить"></p>
-                </form> 
-            </section>
-        </main>
-        
+        <div class="container">
+            <header>
+                <a class="logo" href="index.html"><img class="logoimg" src="images/logo.png" alt="Главная" title="Главная"></a>
+                <nav class="navigation">
+                    <a href="order.html">Заказ</a>
+                    <a href="partnership.html">Сотрудничество</a>
+                    <a href="addresses.html">Отделения</a>
+                </nav>
+            </header>
+            <main>
+                <hr>
+                <section>
+                    <h1>Сотрудничество</h1>
+                    <img class="biggerimag" src="images/call.jpeg">
+                    <h3>Наши партнёры:</h3>
+                    <p class="bott">Ozon Amazon Wildberries AliExpress Yandex.Market Citilink M.Video Eldorado IKEA</p>
+                    <h5>По вопросам сотрудничества можете написать нам на почту</h5>
+                    <form action="mailto:lobastov5442@gmail.com" method="get">
+                        <input type="hidden" name="subject" value="Для сотрудничества" />
+                        <label for="msg">Message:</label>
+                        <textarea id="msg" name="body"></textarea>
+                        <input type="submit" value="Отправить" />
+                    </form>
+                </section>
+                <hr>
+                <section class="bott">
+                    <h1>Трудоустройство</h1>
+                    <h5>Отправить резюме:</h5>
+                    <form enctype="multipart/form-data" action="" method="post">
+                        <p>
+                            <input type="file" name="f">
+                            <input type="submit" value="Отправить">
+                        </p>
+                    </form> 
+                </section>
+            </main>
+            <aside class="left-sidebar"></aside>
+            <aside class="right-sidebar"></aside>
+            <footer></footer>
+        </div>
     </body>
 </html>
