Добавлена страница заказа

--- a/addresses.html
+++ b/addresses.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <title>Отделения</title>
@@ -19,67 +19,67 @@
                 <hr>
                 <section>
                     <h1>Отделения</h1>
-                    <p>Доставка по России и странам СНГ</p>
+                    <p style="margin-bottom: 30px;">Доставка по России и странам СНГ</p>
                     <h3>Список городов:</h3>
-                    <p>Москва
-                        Санкт-Петербург
-                        Киев
-                        Ташкент
-                        Баку
-                        Минск
-                        Алма-Ата
-                        Новосибирск
-                        Екатеринбург
-                        Харьков
-                        Нижний Новгород
-                        Казань
-                        Челябинск
-                        Омск
-                        Самара
-                        Ростов-на-Дону
-                        Уфа
-                        Красноярск
-                        Ереван
-                        Астана
-                        Пермь
-                        Воронеж
-                        Волгоград
-                        Шынкент
-                        Ашхабад
-                        Днепр
-                        Одесса
-                        Бишкек
-                        Донецк
-                        Краснодар
-                        Саратов
-                        Душанбе
-                        Тюмень
-                        Запорожье
-                        Львов
-                        Тольятти
-                        Кишинев
-                        Ижевск
-                        Барнаул
-                        Кривой Рог
-                        Иркутск
-                        Хабаровск
-                        Ульяновск
-                        Ярославль
-                        Владивосток
-                        Наманган
-                        Махачкала
-                        Томск
-                        Оренбург
-                        Кемерово
-                        Новокузнецк
-                        Рязань
-                        Гомель
-                        Астрахань
-                        Самаркант
-                        Набережные Челны
-                        Пенза
-                        Караганда
-                        Липецк
+                    <p style="text-align: justify;">Москва,
+                        Санкт-Петербург,
+                        Киев,
+                        Ташкент,
+                        Баку,
+                        Минск,
+                        Алма-Ата,
+                        Новосибирск,
+                        Екатеринбург,
+                        Харьков,
+                        Нижний Новгород,
+                        Казань,
+                        Челябинск,
+                        Омск,
+                        Самара,
+                        Ростов-на-Дону,
+                        Уфа,
+                        Красноярск,
+                        Ереван,
+                        Астана,
+                        Пермь,
+                        Воронеж,
+                        Волгоград,
+                        Шынкент,
+                        Ашхабад,
+                        Днепр,
+                        Одесса,
+                        Бишкек,
+                        Донецк,
+                        Краснодар,
+                        Саратов,
+                        Душанбе,
+                        Тюмень,
+                        Запорожье,
+                        Львов,
+                        Тольятти,
+                        Кишинев,
+                        Ижевск,
+                        Барнаул,
+                        Кривой Рог,
+                        Иркутск,
+                        Хабаровск,
+                        Ульяновск,
+                        Ярославль,
+                        Владивосток,
+                        Наманган,
+                        Махачкала,
+                        Томск,
+                        Оренбург,
+                        Кемерово,
+                        Новокузнецк,
+                        Рязань,
+                        Гомель,
+                        Астрахань,
+                        Самаркант,
+                        Набережные Челны,
+                        Пенза,
+                        Караганда,
+                        Липецк,
                         Киров
                     </p>
                 </section>
