--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
         <title>Deliver</title>
@@ -28,7 +28,7 @@
                     <img class="imag" src="images/курьер1.jpeg">
                     <img class="imag" src="images/курьер2.jpeg">
                     <img class="imag" src="images/сортировка1.jpeg">
-                    <img class="imag" src="images/сортировка2.jpeg/">
+                    <img class="imag" src="images/сортировка2.jpeg">
                 </section>
             </main>
             <aside class="left-sidebar"></aside>
