Добавлен футер, дополнена страница partnership

--- a/partnership.html
+++ b/partnership.html
@@ -25,7 +25,7 @@
                     <h5>По вопросам сотрудничества можете написать нам на почту</h5>
                     <form action="mailto:lobastov5442@gmail.com" method="get">
                         <input type="hidden" name="subject" value="Для сотрудничества" />
-                        <label for="msg">Message:</label>
+                        <label for="msg">Письмо:</label>
                         <textarea id="msg" name="body"></textarea>
                         <input type="submit" value="Отправить" />
                     </form>
@@ -44,7 +44,7 @@
             </main>
             <aside class="left-sidebar"></aside>
             <aside class="right-sidebar"></aside>
-            <footer></footer>
+            <footer><p style="text-align: center;">© 2017 Компания "Deliver" <br> Гл. офис: Москва, ул. Ленина, 13</p></footer>
         </div>
     </body>
 </html>
