--- a/order.html
+++ b/order.html
@@ -39,7 +39,7 @@
             </main>
             <aside class="left-sidebar"></aside>
             <aside class="right-sidebar"></aside>
-            <footer></footer>
+            <footer><p style="text-align: center;">© 2017 Компания "Deliver" <br> Гл. офис: Москва, ул. Ленина, 13</p></footer>
         </div>
     </body>
 </html>
