Добавлена очистка формы и многоколоночность

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <hr>
                 <section>
                     <h1>Компания доставки Deliver</h1>
-                    <p>Компания "Deliver" на рынке с 2017 года. Высокое качество сервиса - наш приоритет. Вы всегда можете задать вопросы,
+                    <div class="textcols">Компания "Deliver" на рынке с 2017 года. Высокое качество сервиса - наш приоритет. Вы всегда можете задать вопросы,
                         позвонив на горячую линию. Команда профессионалов следит за своевременной доставкой посылки, что включает в себя быстрые перевозки между складами,
                         сортировочными центрами и пунктами выдачи. Сотрудники проходят подготовку, совершенствуют свои навыки и знания, проходят специальные курсы и тренинги.
                         Наша миссия - постоянно развиваться, повышать качество продоставляемых услуг за счет внедрения новейших технологий. В своей деятельности компания
                         руководствуется принципом - "Быстро. Надёжно. Качественно",поэтому ответственное отношение к нашей работе - главное.
-                    </p>
+                    </div>
                     <img class="imag" src="images/курьер1.jpeg">
                     <img class="imag" src="images/курьер2.jpeg">
                     <img class="imag" src="images/сортировка1.jpeg">
