--- a/partnership.html
+++ b/partnership.html
@@ -28,6 +28,7 @@
                         <label for="msg">Письмо:</label>
                         <textarea id="msg" name="body"></textarea>
                         <input type="submit" value="Отправить" />
+                        <input type="reset" value="Очистить форму" />
                     </form>
                 </section>
                 <hr>
