--- a/order.html
+++ b/order.html
@@ -32,6 +32,24 @@
                                 <td><label for="check">Ссылка на чек:</label></td>
                                 <td><input id="check" type="text"></td>
                             </tr>
+                            <tr>
+                                <td><label>Выберите страну:</label></td>
+                                <td>
+                                    <select name="country" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
+                                        <option value="s1">Азербайджан</option>
+                                        <option value="s2">Армения</option>
+                                        <option value="s3">Белоруссия</option>
+                                        <option value="s4">Казахстан</option>
+                                        <option value="s5">Киргизия</option>
+                                        <option value="s6">Молдавия</option>
+                                        <option value="s7">Россия</option>
+                                        <option value="s8">Таджикистан</option>
+                                        <option value="s3">Узбекистан</option>
+                                    </select> 
+                                </td>
+                            </tr>
+                               
+                           
                         </table>
                         <input type="submit" value="Заказать" />
                     </form>
