Добавлены стили для полей в заказе

--- a/partnership.html
+++ b/partnership.html
@@ -23,12 +23,12 @@
                     <h3>Наши партнёры:</h3>
                     <p class="bott">Ozon Amazon Wildberries AliExpress Yandex.Market Citilink M.Video Eldorado IKEA</p>
                     <h5>По вопросам сотрудничества можете написать нам на почту</h5>
-                    <form action="mailto:lobastov5442@gmail.com" method="get">
+                    <form style="margin-bottom: 20px;" action="mailto:lobastov5442@gmail.com" method="get">
                         <input type="hidden" name="subject" value="Для сотрудничества" />
-                        <label for="msg">Письмо:</label>
+                        <label style="font-size: 16px;" for="msg">Письмо:</label>
                         <textarea id="msg" name="body"></textarea>
                         <input type="submit" value="Отправить" />
-                        <input type="reset" value="Очистить форму" />
+                        <input type="reset" value="Очистить" />
                     </form>
                 </section>
                 <hr>
