--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <aside class="left-sidebar"></aside>
             <aside class="right-sidebar"></aside>
             <footer> 
-                <p style="text-align: center;">© 2017 Компания "Deliver" <br> Гл. офис: Москва, ул. Ленина, 13</p>
+                <p style="text-align: center;">© 2017 Компания "Deliver" <br> Гл. офис: Москва, ул. Ленина, 13. Тел: 473 94 68</p>
             </footer>
         </div>
     </body>
